--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,6 +7,16 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+header  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+header img {
+    width: 50%;
+}
+
 .aneis, .brincos, .correntes, .pulseiras, .conjuntos {
     margin-top: 100px;
     text-align: center;
