--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -22,6 +22,7 @@ header  {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 1
 }
 header img {
     width: 50%;
@@ -66,12 +67,18 @@ li > img {
 }
 
 #carrinho {
-    position: relative;
+    position: absolute;
+    bottom: '100%';
+    right: 0;
+    left: 0;
     /* transform: '100%'; */
     display: none;
+    width: 100%;
     /* transition: left 1s linear 1s; */
     border: 1px solid black;
+    background-color: rgb(214, 229, 243);
     border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.575);
 }
 .quantidade {
     background-color: white;
@@ -107,9 +114,13 @@ menu div {
 select, option {
     cursor: pointer;
 }
+.filtro {
+    margin-left: 20px;
+}
 .carrinho {
     cursor: pointer;
     font-size: 2.5em;
+    margin-right: 20px;
 }
 .aneis {
     margin-top: 350px;
