--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -158,7 +158,12 @@ select, option {
     border-radius: 15px;
     cursor: pointer;
 }
-
+.botao-adiciona-no-carrinho {
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.507);
+}
 .atirada {
     position: relative;
     top: 0px;
