--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -15,7 +15,8 @@ a {
 header  {
     position: fixed;
     top: 0;
-    height: 325px;
+    bottom: 0;
+    height: 290px;
     width: 100%;
     background-color: white;
     display: flex;
@@ -25,7 +26,8 @@ header  {
     z-index: 1
 }
 header img {
-    width: 50%;
+    width: 45%;
+    margin-top: 25px;
 }
 .lixeira {
     cursor: pointer;
@@ -52,6 +54,9 @@ menu {
     width: 150%;
     justify-content: space-around;
     align-items: center;
+}
+h1 {
+    font-size: 1.5em;
 }
 h1, h4 {
     text-align: center;
@@ -90,6 +95,7 @@ li > img {
     padding: 2px;
     font-size: 0.4em;
     width: 10px;
+    display: none;
 }
 .lista-carrinho {
     display: flex;
@@ -142,13 +148,22 @@ select, option {
     display: flex;
     margin: 15px 5px;
     flex-direction: column;
+    justify-content: center;
     width: 155px;
+    background-color: lightblue;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.425);
     /* width: calc(32% - (4 * 5px)); */
 }
 
 .container-produto h3 {
+    display: flex;
+    align-items: center;
     font-weight: lighter;
     cursor: pointer;
+    font-size: 1em;
+    height: 50px;
 }
 .container-produto p {
     font-weight: bold;
@@ -165,9 +180,8 @@ select, option {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.507);
 }
 .atirada {
-    position: relative;
-    top: 0px;
+    position: absolute;
     width: 50px;
     transition: 0.3s;
-
+    z-index: 1;
 }
