--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,12 +7,16 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body {
+    /* background-image: linear-gradient(to right, rgb(60, 60, 161), rgb(12, 12, 48)); */
+}
 a {
     text-decoration: none;
     color: black;
 }
 header  {
+    
+    /* background-image: linear-gradient(to right, rgb(60, 60, 161), rgb(12, 12, 48)); */
     position: fixed;
     top: 0;
     bottom: 0;
@@ -61,7 +65,6 @@ h1 {
 h1, h4 {
     text-align: center;
 }
-
 div {
     margin: 20px 0;
 }
@@ -137,6 +140,7 @@ select, option {
     text-align: center;
 }
 .container {
+    /* background-image: linear-gradient(to right, rgb(60, 60, 161), rgb(12, 12, 48)); */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
