--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -83,7 +83,7 @@ li > img {
 
 #carrinho {
     position: absolute;
-    bottom: '100%';
+    top: '100%';
     right: 0;
     left: 0;
     /* transform: '100%'; */
@@ -105,7 +105,6 @@ li > img {
     border-radius: 50%;
     padding: 2px;
     font-size: 0.4em;
-    width: 10px;
     display: none;
 }
 .lista-carrinho {
@@ -120,6 +119,10 @@ li > img {
     padding: 10px;
     text-align: center;
     width: 100%;
+}
+.item-carrinho img {
+    width: 56px;
+    height: 56px;
 }
 .total {
     font-weight: bold;
