--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -9,22 +9,28 @@
 }
 body {
     background-image: url('../src/fundo-ondulado-azul-da-agua-na-piscina.jpg');
+    background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
+}
+
+body h2 {
+    background-color: rgba(0, 0, 0, 0.425);
+    width: 100%;
+    color: white;
 }
 a {
     text-decoration: none;
     color: black;
 }
 header  {
-    
+    background-color: white;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.466);
     position: fixed;
     top: 0;
     bottom: 0;
     height: 290px;
     width: 100%;
-    background-image: linear-gradient(to bottom, #82e5e5, #075050);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -158,7 +164,7 @@ select, option {
     text-align: center;
 }
 .container {
-    background-image: url('../src/fundo-ondulado-azul-da-agua-na-piscina.jpg');
+    background-color: white;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
