--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -208,12 +208,13 @@ select, option {
 
 .container-produto h3 {
     display: flex;
-    align-items: center;
     font-weight: lighter;
     cursor: pointer;
     font-size: 1em;
     height: 50px;
     color: white;
+    text-align: center;
+    margin: auto;
 }
 .container-produto p {
     font-weight: bold;
