--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+
 *,
 ::before,
 *::after {
@@ -5,13 +7,14 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Handlee', cursive;
 }
 body {
     background-image: url('../src/fundo-ondulado-azul-da-agua-na-piscina.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: contain;
+    font-family: 'Handlee', cursive;
 }
 
 body h2 {
@@ -24,7 +27,7 @@ a {
     color: black;
 }
 header  {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.466);
     position: fixed;
     top: 0;
