--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -64,7 +64,6 @@ header img {
 
 }
 menu {
-    padding: 5px;
     display: flex;
     margin-bottom: 40px;
     width: 150%;
@@ -131,6 +130,7 @@ li > img {
     /* border: 1px solid black; */
     border-radius: 50%;
     padding: 2px;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 0.4em;
     display: none;
 }
