--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -27,7 +27,10 @@ a {
     color: black;
 }
 header  {
-    background-color: rgb(255, 255, 255);
+    background-image: url(../src/header.jpg);
+    background-color: white;
+    background-size: cover;
+    /* background-color: rgb(255, 255, 255); */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.466);
     position: fixed;
     top: 0;
