--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -103,9 +103,13 @@ li > img {
     width: 100%;
     /* transition: left 1s linear 1s; */
     border: 1px solid black;
-    background-color: rgb(214, 229, 243);
+    background-color: rgb(209, 228, 240);
     border-radius: 5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.575);
+    color: #075050;
+}
+#carrinho h4 {
+    margin-top: 10px;
 }
 .inserir-cep {
     display: flex;
