--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -10,7 +10,7 @@
     font-family: 'Handlee', cursive;
 }
 body {
-    background-image: url('../src/fundo-ondulado-azul-da-agua-na-piscina.jpg');
+    background-image: url('../src/fundo1.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: contain;
