--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -137,7 +137,8 @@ li > img {
 #botao-comprar {
     background-color: lightgray;
     border-radius: 5px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.63);
 }
 .quantidade {
     background-color: white;
