--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -113,6 +113,8 @@ li > img {
 }
 #transparencia {
     background-color: rgba(255, 255, 255, 0.747);
+    margin: 0;
+    padding: 10px;
 }
 #carrinho h4 {
     margin-top: 10px;
@@ -211,7 +213,7 @@ select, option {
     text-align: center;
 }
 .container {
-    background-color: white;
+    background-color: rgb(235, 232, 232);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -228,7 +230,7 @@ select, option {
     flex-direction: column;
     justify-content: center;
     width: 155px;
-    background-color: #075050;
+    background-color: white;
     padding: 5px;
     border-radius: 10px;
     font-family: 'Handlee', cursive;
@@ -242,14 +244,15 @@ select, option {
     cursor: pointer;
     font-size: 1em;
     height: 50px;
-    color: white;
+    color: black;
     text-align: center;
     margin: auto;
+    align-items: center;
 }
 .container-produto p {
     font-weight: bold;
     cursor: pointer;
-    color: white;
+    color: #075050;
 }
 .container-produto img {
     border-radius: 15px;
